# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md
src/: arithmetic_logic_unit.cpp  branch_comparator.cpp  data_memory.cpp  immediate_generator.cpp  instruction_memory.cpp  instruction_parser.cpp  interpreter.cpp  main.cpp  memory.cpp  naive_main.cpp  register_file.cpp  selector.cpp  simulator.cpp
src/Tomasulo_module/: arithmetic_logic_unit.cpp  instruction_parser.cpp  load_store_buffer.cpp  memory.cpp  predictor.cpp  register_file.cpp  reorder_buffer.cpp  reservation_station.cpp
src/include/: arithmetic_logic_unit.h  data_memory.h  immediate_generator.h  instruction_memory.h  instruction_parser.h  interpreter.h  register_file.h  selector.h  simulator.h
src/include/Tomasulo_module/: arithmetic_logic_unit.h  instruction_parser.h  load_store_buffer.h  memory.h  modules.h  predictor.h  register_file.h  reorder_buffer.h  reservation_station.h
src/include/pipeline_module/: arithmetic_logic_unit.h  branch_comparator.h  immediate_generator.h  instruction_parser.h  memory.h  register_file.h  selector.h
src/pipeline_module/: arithmetic_logic_unit.cpp  branch_comparator.cpp  immediate_generator.cpp  instruction_parser.cpp  memory.cpp  register_file.cpp  selector.cpp
